2013-06-23  The Parasithe  <bipbip500@hotmail.com>

	* TestScreen.cs:
	* FPSCounter.cs:
	* Drawable.cs:
	* UIConstants.cs:
	* GREATClient.Linux.csproj:
	* GameplayScreen.cs:
	* DrawableLabel.cs:
	* GREATClient.Windows.csproj: 

2013-06-22  The Parasithe  <bipbip500@hotmail.com>

	* TestScreen.cs:
	* Ubuntu.xnb:
	* GREATClient.Linux.csproj:
	* DrawableLabel.cs:
	* GREATClient.Windows.csproj: 

2013-06-17  The Parasithe  <bipbip500@hotmail.com>

	* Game1.cs:
	* TestScreen.cs:
	* Ubuntu.bmp:
	* MyFont.xnb:
	* Container.cs:
	* GREATClient.Linux.csproj:
	* Ubuntu.spritefont:
	* DrawableLabel.cs:
	* DrawableImage.cs:
	* GREATClient.Windows.csproj: 

2013-06-11  Jesse  <jesse.emond@hotmail.com>

	* Client.cs:
	* DrawableChampion.cs: 

2013-06-11  Jesse  <jesse.emond@hotmail.com>

	* Client.cs:
	* GameplayScreen.cs:
	* DrawableRectangle.cs:
	* DrawableChampion.cs: 

2013-06-07  Jesse  <jesse.emond@hotmail.com>

	* Client.cs:
	* GameplayScreen.cs:
	* DrawableChampion.cs: 

2013-06-06  Jesse  <jesse.emond@hotmail.com>

	* Game1.cs:
	* Client.cs:
	* TestScreen.cs:
	* GameplayScreen.cs: 

2013-06-06  Jesse  <jesse.emond@hotmail.com>

	* Game1.cs:
	* Client.cs:
	* GREATClient.Linux.csproj:
	* GameplayScreen.cs:
	* GREATClient.Windows.csproj: 

2013-06-06  Jesse  <jesse.emond@hotmail.com>

	* Drawable.cs: 

2013-06-06  Jesse  <jesse.emond@hotmail.com>

	* TestScreen.cs: 

2013-05-28  Jesse  <jesse.emond@hotmail.com>

	* ChangeLog: 

<<<<<<< HEAD
2013-05-28  Jesse  <jesse.emond@hotmail.com>

	* TestScreen.cs: 

2013-05-28  Jesse  <jesse.emond@hotmail.com>

	* ChangeLog:
	* TestScreen.cs:
	* Drawable.cs:
	* DrawableImage.cs: 

<<<<<<< HEAD
2013-05-28  Jesse  <jesse.emond@hotmail.com>

	* TestScreen.cs: 

2013-05-28  Jesse  <jesse.emond@hotmail.com>

	* ChangeLog:
	* TestScreen.cs: 

2013-05-28  Jesse  <jesse.emond@hotmail.com>

	* ChangeLog:
	* TestScreen.cs: 

<<<<<<< HEAD
2013-05-28  Jesse  <>

	* TestScreen.cs:
	* DrawableImage.cs:
	* DrawableCircle.cs:
	* DrawableSprite.cs: