@@ -74,8 +74,8 @@ namespace GREATClient
 		protected override void Initialize()
 		{
 			Console.WriteLine("Starting client...");
-			//gameplay = new GameplayScreen(Content, client); // when testing: new TestScreen(Content);
-			gameplay = new TestScreen(Content);
+			gameplay = new GameplayScreen(Content, client); // when testing: new TestScreen(Content);
+			//gameplay = new TestScreen(Content);
 			client.Start();
 
 			base.Initialize();
