@@ -70,11 +70,21 @@ namespace GREATClient
 
 
 			//Test particle
-			ParticleSystem sys = new ParticleSystem(Content, 1000, null);
+			/*ParticleSystem sys = new ParticleSystem(Content, 1000, null);
 			sys.Position = new Vector2(100, 100);
-			AddChild(sys);
+			AddChild(sys);*/
 
-		
+			AddChild(new PingCounter(yo));
+
+		}
+
+
+		/// <summary>
+		/// Boobies reference
+		/// </summary>
+		protected double yo()
+		{
+			return 32d;
 		}
 
 		protected override void OnUpdate(GameTime dt)
