@@ -1,3 +1,13 @@
+2013-07-02  The Parasithe  <bipbip500@hotmail.com>
+
+	* Game1.cs:
+	* TestScreen.cs:
+	* FPSCounter.cs:
+	* PingCounter.cs:
+	* GREATClient.Linux.csproj:
+	* GameplayScreen.cs:
+	* GREATClient.Windows.csproj: 
+
 2013-06-23  The Parasithe  <bipbip500@hotmail.com>
 
 	* TestScreen.cs:
